# FastAPI_S3_storage

backend/photos/: main.py  pyproject.toml
backend/photos/alembic/: env.py
backend/photos/alembic/versions/: 2024_06_16_1804-9d7c16e14728_create_photo_model.py  2024_06_17_1211-1362af74fc42_create_user_model.py
backend/photos/api/: depends.py
backend/photos/api/api_v1/: api.py
backend/photos/api/api_v1/endpoints/: auth.py  photos.py
backend/photos/core/: security.py  settings.py
backend/photos/database/: database.py
backend/photos/database/models/: base.py  photo.py  user.py
backend/photos/database/repo/: abstract.py  photos.py  users.py
backend/photos/schemas/: photo.py  token.py  user.py
backend/photos/tests/: conftest.py
backend/photos/utils/: minio.py
