[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["valiaisnotprogrammer <ValiaChernykh@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.2"
sqlmodel = "^0.0.19"
#fastapi-async-sqlalchemy = "^0.6.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
#sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
minio = "^7.2.7"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
